Utilise boutons, commandbar etc. pour 2nd devoir
Ajoute des boutons, CommandBar, ListView et GridView pour le 2ème
devoir.

--- a/RestaurantManager/RestaurantManager/MainPage.xaml
+++ b/RestaurantManager/RestaurantManager/MainPage.xaml
@@ -17,12 +17,12 @@
             <ColumnDefinition Width="0.5*" />
             <ColumnDefinition Width="0.5*" />
         </Grid.ColumnDefinitions>
-        <!-- Title -->
+        
         <TextBlock Grid.Row="0" Grid.ColumnSpan="2" Text="Restaurant Manager" HorizontalAlignment="Center" VerticalAlignment="Bottom" FontSize="50" FontWeight="Bold" />
-        <!-- Subtitle  -->
+        
         <TextBlock Grid.Row="1" Grid.ColumnSpan="2" Text="Internal Test Version" HorizontalAlignment="Center" VerticalAlignment="Bottom"/>
-        <!-- Buttons -->
-        <TextBlock Grid.Row="2" Grid.Column="0" Text="**Go to Orders View**" HorizontalAlignment="Center" VerticalAlignment="Center" FontSize="43"/>
-        <TextBlock Grid.Row="2" Grid.Column="1" Text="**Submit Order**" HorizontalAlignment="Center" VerticalAlignment="Center" FontSize="43"/>
+        
+        <Button x:Name="ViewOrderButton" Grid.Row="2" Grid.Column="0" Content="Go to Orders View" HorizontalAlignment="Center" VerticalAlignment="Center" FontSize="43" Click="ViewOrderButton_Click"/>
+        <Button x:Name="SubmitOrderButton" Grid.Row="2" Grid.Column="1" Content="Submit Order" HorizontalAlignment="Center" VerticalAlignment="Center" FontSize="43" Click="SubmitOrderButton_Click"/>
     </Grid>
 </Page>
