--- a/RestaurantManager/RestaurantManager/App.xaml
+++ b/RestaurantManager/RestaurantManager/App.xaml
@@ -7,13 +7,19 @@
     <Application.Resources>
         <Style TargetType="Button">
             <Setter Property="FontSize" Value="32" />
+            <Setter Property="Foreground" Value="White" />
+            <Setter Property="Background" Value="#FF424242" />
         </Style>
         <Style TargetType="TextBlock">
             <Setter Property="FontSize" Value="32" />
             <Setter Property="Foreground" Value="White" />
         </Style>
-        <!-- <Style TargetType="Grid">
-            <Setter Property="Background" Value="Black" />
-        </Style> -->
+        <Style TargetType="CommandBar">
+            <Setter Property="Background" Value="#FF2E2A2A" />
+            <Setter Property="Foreground" Value="White" />
+        </Style>
+        <Style TargetType="AppBarButton">
+            <Setter Property="Foreground" Value="White" />
+        </Style>
     </Application.Resources>
 </Application>
