--- a/RestaurantManager/RestaurantManager/ExpeditePage.xaml
+++ b/RestaurantManager/RestaurantManager/ExpeditePage.xaml
@@ -7,12 +7,19 @@
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     mc:Ignorable="d">
 
+    <Page.TopAppBar>
+        <CommandBar>
+            <AppBarButton Icon="Home" Label="Home" Click="AppBarHomeButton_Click" />
+        </CommandBar>
+    </Page.TopAppBar>
     <Grid Background="Black">
         <Grid.RowDefinitions>
             <RowDefinition Height="0.9*" />
             <RowDefinition Height="0.1*" />
         </Grid.RowDefinitions>
-        <!-- Clear Button  -->
-        <TextBlock Grid.Row="1" Text="**Clear All Orders**" HorizontalAlignment="Center" VerticalAlignment="Center" FontSize="43"/>
+
+        <GridView Grid.Row="0" Background="#FF1B1919" />
+
+        <Button Grid.Row="1" Content="Clear All Orders" HorizontalAlignment="Center" VerticalAlignment="Center" FontSize="43"/>
     </Grid>
 </Page>
