--- a/RestaurantManager/RestaurantManager/OrderPage.xaml
+++ b/RestaurantManager/RestaurantManager/OrderPage.xaml
@@ -7,6 +7,11 @@
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     mc:Ignorable="d">
 
+    <Page.TopAppBar>
+        <CommandBar>
+            <AppBarButton Icon="Home" Label="Home" Click="AppBarHomeButton_Click" />
+        </CommandBar>
+    </Page.TopAppBar>
     <Grid Background="Black">
         <Grid.RowDefinitions>
             <RowDefinition Height="0.2*" />
@@ -20,11 +25,14 @@
             <ColumnDefinition Width="0.25*" />
             <ColumnDefinition Width="0.25*" />
         </Grid.ColumnDefinitions>
-        <!-- Infos -->
-        <TextBlock Grid.Row="1" Grid.Column="1" Text="Special Requests:" HorizontalAlignment="Left" VerticalAlignment="Top" FontSize="43" />
-        <TextBlock Grid.Row="1" Grid.Column="2" Text="Order Items:" HorizontalAlignment="Left" VerticalAlignment="Top" FontSize="43"/>
-        <!-- Buttons -->
-        <TextBlock Grid.Row="4" Grid.Column="0" Text="**Add to Order**" HorizontalAlignment="Center" VerticalAlignment="Center" FontSize="43"/>
-        <TextBlock Grid.Row="4" Grid.Column="1" Grid.ColumnSpan="2" Text="**Submit Order**" HorizontalAlignment="Center" VerticalAlignment="Center" FontSize="43"/>
+
+        <TextBlock Grid.Row="1" Grid.Column="1" Text="Special Requests:" HorizontalAlignment="Left" VerticalAlignment="Top" />
+        <TextBlock Grid.Row="1" Grid.Column="2" Text="Order Items:" HorizontalAlignment="Left" VerticalAlignment="Top" />
+        
+        <ListView  Grid.Row="2" Grid.Column="0" Background="#FF1B1919" />
+        <ListView  Grid.Row="2" Grid.Column="2" Background="#FF1B1919"/>
+        
+        <Button Grid.Row="4" Grid.Column="0" Content="Add to Order" HorizontalAlignment="Center" VerticalAlignment="Center" FontSize="43"/>
+        <Button Grid.Row="4" Grid.Column="1" Grid.ColumnSpan="2" Content="Submit Order" HorizontalAlignment="Center" VerticalAlignment="Center" FontSize="43"/>
     </Grid>
 </Page>
