--- a/RestaurantManager/RestaurantManager/OrderPage.xaml
+++ b/RestaurantManager/RestaurantManager/OrderPage.xaml
@@ -5,8 +5,15 @@
     xmlns:local="using:RestaurantManager"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+    xmlns:models="using:RestaurantManager.Models"
     mc:Ignorable="d">
 
+    <Page.DataContext>
+        <Binding Source="{StaticResource DataManager}"/>
+    </Page.DataContext>
+    
+    <!-- default style for TextBlocks and Buttons define in App.xaml -->
+    
     <Page.TopAppBar>
         <CommandBar>
             <AppBarButton Icon="Home" Label="Home" Click="AppBarHomeButton_Click" />
@@ -28,11 +35,11 @@
 
         <TextBlock Grid.Row="1" Grid.Column="1" Text="Special Requests:" HorizontalAlignment="Left" VerticalAlignment="Top" />
         <TextBlock Grid.Row="1" Grid.Column="2" Text="Order Items:" HorizontalAlignment="Left" VerticalAlignment="Top" />
+
+        <ListView  Grid.Row="2" Grid.Column="0" Background="#FF1B1919" ItemsSource="{Binding MenuItems}" />
+        <ListView  Grid.Row="2" Grid.Column="2" Background="#FF1B1919" ItemsSource="{Binding CurrentlySelectedMenuItems}"  />
         
-        <ListView  Grid.Row="2" Grid.Column="0" Background="#FF1B1919" />
-        <ListView  Grid.Row="2" Grid.Column="2" Background="#FF1B1919"/>
-        
-        <Button Grid.Row="4" Grid.Column="0" Content="Add to Order" HorizontalAlignment="Center" VerticalAlignment="Center" FontSize="43"/>
-        <Button Grid.Row="4" Grid.Column="1" Grid.ColumnSpan="2" Content="Submit Order" HorizontalAlignment="Center" VerticalAlignment="Center" FontSize="43"/>
+        <Button Grid.Row="4" Grid.Column="0" Content="Add to Order" HorizontalAlignment="Center" VerticalAlignment="Center" />
+        <Button Grid.Row="4" Grid.Column="1" Grid.ColumnSpan="2" Content="Submit Order" HorizontalAlignment="Center" VerticalAlignment="Center" />
     </Grid>
 </Page>
