--- a/RestaurantManager/RestaurantManager/App.xaml
+++ b/RestaurantManager/RestaurantManager/App.xaml
@@ -3,6 +3,7 @@
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:local="using:RestaurantManager"
+    xmlns:models="using:RestaurantManager.Models"
     RequestedTheme="Light">
     <Application.Resources>
         <Style TargetType="Button">
@@ -21,5 +22,10 @@
         <Style TargetType="AppBarButton">
             <Setter Property="Foreground" Value="White" />
         </Style>
+        <Style TargetType="ListView">
+            <Setter Property="Foreground" Value="White" />
+        </Style>
+        <models:DataManager x:Key="DataManager" />
     </Application.Resources>
+
 </Application>
