--- a/RestaurantManager/RestaurantManager/ExpeditePage.xaml
+++ b/RestaurantManager/RestaurantManager/ExpeditePage.xaml
@@ -5,8 +5,15 @@
     xmlns:local="using:RestaurantManager"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+    xmlns:models="using:RestaurantManager.Models"
     mc:Ignorable="d">
 
+    <!-- default style for TextBlocks and Buttons define in App.xaml -->
+
+    <Page.DataContext>
+        <Binding Source="{StaticResource DataManager}"/>
+    </Page.DataContext>
+    
     <Page.TopAppBar>
         <CommandBar>
             <AppBarButton Icon="Home" Label="Home" Click="AppBarHomeButton_Click" />
@@ -18,8 +25,8 @@
             <RowDefinition Height="0.1*" />
         </Grid.RowDefinitions>
 
-        <GridView Grid.Row="0" Background="#FF1B1919" />
+        <GridView Grid.Row="0" Background="#FF1B1919" ItemsSource="{Binding OrderItems}" />
 
-        <Button Grid.Row="1" Content="Clear All Orders" HorizontalAlignment="Center" VerticalAlignment="Center" FontSize="43"/>
+        <Button Grid.Row="1" Content="Clear All Orders" HorizontalAlignment="Center" VerticalAlignment="Center"/>
     </Grid>
 </Page>
